[package]
name = "krishiv-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Lean embedded baseline: local Parquet only. Enable `kafka`, `lakehouse`, or
# `vector-sinks` explicitly for integration families.
default = ["parquet"]

# Core batch/object-store connectors
parquet = []
s3 = []
two-phase = ["parquet"]

# Streaming
kafka = ["dep:rdkafka"]
schema-registry = [
    "kafka",
    "dep:apache-avro",
    "dep:async-trait",
    "dep:dashmap",
    "dep:reqwest",
    "dep:serde",
    "dep:prost",
]
state = ["dep:krishiv-state"]

# Lakehouse integration (implementation remains in `krishiv-lakehouse`)
lakehouse = ["dep:krishiv-lakehouse"]
iceberg = ["lakehouse", "krishiv-lakehouse/iceberg"]
delta = ["lakehouse", "krishiv-lakehouse/delta"]
hudi = ["lakehouse"]

# Vector sinks (migrated from `krishiv-ai::vector_sinks`)
vector-sinks = [
    "dep:async-trait",
    "dep:dashmap",
    "dep:reqwest",
    "dep:serde",
    "dep:twox-hash",
]
qdrant = ["vector-sinks", "dep:qdrant-client"]
pgvector = ["vector-sinks", "dep:sqlx"]

# Convenience presets
local = ["parquet", "s3", "kafka", "two-phase"]
full = [
    "local",
    "lakehouse",
    "iceberg",
    "delta",
    "hudi",
    "vector-sinks",
    "qdrant",
    "pgvector",
    "schema-registry",
    "state",
]

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true, features = ["object_store", "async"] }
bytes = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
krishiv-common = { path = "../krishiv-common" }
krishiv-lakehouse = { path = "../krishiv-lakehouse", optional = true }
krishiv-proto = { path = "../krishiv-proto" }
krishiv-state = { path = "../krishiv-state", optional = true }
object_store = { workspace = true }
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["tokio"] }
regex = "1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tracing = { workspace = true }

# schema-registry feature dependencies
apache-avro = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

# vector-sinks feature dependencies
qdrant-client = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
twox-hash = { workspace = true, optional = true }

[dev-dependencies]
mockito = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
proptest = "1"
wiremock = { workspace = true }

[lints]
workspace = true
