[package]
name = "krishiv-dataflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[dependencies]
arrow = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
smallvec = "1"
thiserror = { workspace = true }
krishiv-common = { path = "../krishiv-common" }
krishiv-connectors = { path = "../krishiv-connectors", features = ["lakehouse"] }
krishiv-metrics = { path = "../krishiv-metrics" }
krishiv-plan = { path = "../krishiv-plan" }
krishiv-state = { path = "../krishiv-state" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
async-stream = "0.3.6"
futures.workspace = true

[dev-dependencies]
proptest = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
