[package]
name = "krishiv-dataflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
readme = "README.md"

[dependencies]
arrow = { workspace = true }
ahash = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
smallvec = "1"
thiserror = { workspace = true }
krishiv-common = { path = "../krishiv-common", version = "0.1.0" }
krishiv-connectors = { path = "../krishiv-connectors", version = "0.1.0", features = ["lakehouse"] }
krishiv-metrics = { path = "../krishiv-metrics", version = "0.1.0" }
krishiv-plan = { path = "../krishiv-plan", version = "0.1.0" }
krishiv-state = { path = "../krishiv-state", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }
async-stream = "0.3.6"
futures.workspace = true

[dev-dependencies]
proptest = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
