[package]
name = "krishiv-engine-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
krishiv-common = { path = "../krishiv-common" }
krishiv-proto = { path = "../krishiv-proto" }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
