[package]
name = "krishiv-exec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
krishiv-lakehouse = { path = "../krishiv-lakehouse" }
krishiv-plan = { path = "../krishiv-plan" }
tokio = { workspace = true, features = ["sync", "time"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
