[package]
name = "krishiv-exec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
thiserror = { workspace = true }
krishiv-ai = { path = "../krishiv-ai" }
krishiv-cep = { path = "../krishiv-cep" }
krishiv-lakehouse = { path = "../krishiv-lakehouse" }
krishiv-plan = { path = "../krishiv-plan" }
krishiv-state = { path = "../krishiv-state" }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
