[package]
name = "krishiv-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
readme = "README.md"

[features]
kafka = ["krishiv-connectors/kafka"]
jemalloc = ["dep:tikv-jemallocator"]

[dependencies]
tikv-jemallocator = { workspace = true, optional = true }
arrow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
constant_time_eq = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
twox-hash = { workspace = true }
krishiv-common = { path = "../krishiv-common", version = "0.1.0" }
krishiv-ivm = { path = "../krishiv-ivm", version = "0.1.0" }
krishiv-metrics = { path = "../krishiv-metrics", version = "0.1.0" }
krishiv-connectors = { path = "../krishiv-connectors", version = "0.1.0", features = ["lakehouse"] }
krishiv-dataflow = { path = "../krishiv-dataflow", version = "0.1.0" }
krishiv-plan = { path = "../krishiv-plan", version = "0.1.0" }
krishiv-proto = { path = "../krishiv-proto", version = "0.1.0" }
krishiv-shuffle = { path = "../krishiv-shuffle", version = "0.1.0" }
krishiv-sql = { path = "../krishiv-sql", version = "0.1.0" }
krishiv-state = { path = "../krishiv-state", version = "0.1.0" }
object_store = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "signal", "sync"] }
tokio-stream.workspace = true
tonic.workspace = true
thiserror = { workspace = true }
tracing.workspace = true

[dev-dependencies]
arrow.workspace = true
krishiv-scheduler = { path = "../krishiv-scheduler", version = "0.1.0" }
krishiv-shuffle = { path = "../krishiv-shuffle", version = "0.1.0" }
parquet.workspace = true
tempfile.workspace = true

[[bin]]
name = "krishiv-executor"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
