[package]
name = "krishiv-flight-sql"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
readme = "README.md"

[dependencies]
tikv-jemallocator = { workspace = true, optional = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
krishiv-api = { path = "../krishiv-api", version = "0.1.0" }
krishiv-common = { path = "../krishiv-common", version = "0.1.0" }
krishiv-metrics = { path = "../krishiv-metrics", version = "0.1.0" }
krishiv-plan = { path = "../krishiv-plan", version = "0.1.0" }
krishiv-runtime = { path = "../krishiv-runtime", version = "0.1.0" }
krishiv-scheduler = { path = "../krishiv-scheduler", version = "0.1.0" }
krishiv-sql = { path = "../krishiv-sql", version = "0.1.0" }

dashmap = { workspace = true }
lru = "0.18"
sha2 = { workspace = true }
hex.workspace = true
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

[features]
kafka = ["krishiv-runtime/kafka", "krishiv-api/kafka"]
jemalloc = ["dep:tikv-jemallocator"]
# Attach an Iceberg REST catalog (e.g. the Krishiv Platform catalog) to the
# in-process engine at daemon startup via KRISHIV_ICEBERG_REST_* env vars.
rest-catalog = ["krishiv-sql/rest-catalog", "krishiv-sql/iceberg-datafusion"]

[dev-dependencies]
futures = { workspace = true }
krishiv-proto = { path = "../krishiv-proto", version = "0.1.0" }
tokio = { workspace = true, features = ["rt", "macros"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "krishiv-flight-server"
path = "src/bin/krishiv_flight_server.rs"

[lints]
workspace = true
