[package]
name = "krishiv-flight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared Krishiv Arrow Flight SQL comment protocol"

[dependencies]
arrow = { workspace = true }
base64 = "0.22"
krishiv-plan = { path = "../krishiv-plan" }
serde_json = { workspace = true }

[lints]
workspace = true
