[package]
name = "krishiv-ivm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
krishiv-common = { path = "../krishiv-common" }
krishiv-delta = { path = "../krishiv-delta" }
arrow = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
base64 = { workspace = true }
twox-hash = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
