[package]
name = "krishiv-ivm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
krishiv-common = { path = "../krishiv-common", version = "0.1.0" }
krishiv-delta = { path = "../krishiv-delta", version = "0.1.0" }
arrow = { workspace = true }
datafusion = { workspace = true }
sqlparser = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
base64 = { workspace = true }
twox-hash = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
