[package]
name = "krishiv-lakehouse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
iceberg = { workspace = true }
parquet = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
url = "2"
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["tokio"] }

[features]
default = []
delta = []
kafka = ["dep:rdkafka"]
exactly-once-integration = []

[dev-dependencies]
krishiv-connectors = { path = "../krishiv-connectors" }
tempfile = { workspace = true }

[[test]]
name = "exactly_once"
path = "tests/exactly_once.rs"
required-features = ["exactly-once-integration"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true
