[package]
name = "krishiv-lakehouse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
krishiv-connectors = { path = "../krishiv-connectors", features = ["lakehouse"] }

[features]
default = []
iceberg = ["krishiv-connectors/iceberg"]
delta = ["krishiv-connectors/delta"]
hudi = ["krishiv-connectors/hudi"]
kafka = ["krishiv-connectors/kafka"]
exactly-once-integration = []

[dev-dependencies]
krishiv-connectors = { path = "../krishiv-connectors", features = ["lakehouse", "kafka"] }
tempfile = { workspace = true }
tokio = { workspace = true }

[[test]]
name = "exactly_once"
path = "tests/exactly_once.rs"
required-features = ["exactly-once-integration"]

[lib]
path = "src/lib.rs"

[lints]
workspace = true
