[package]
name = "krishiv-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Model Context Protocol frontend for Krishiv"
keywords = ["mcp", "sql", "streaming", "arrow", "datafusion"]
categories = ["database", "asynchronous"]

[lib]
path = "src/lib.rs"

[dependencies]
arrow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
krishiv-api = { path = "../krishiv-api", version = "0.1.0" }
krishiv-connectors = { path = "../krishiv-connectors", version = "0.1.0", features = ["lakehouse", "vector-sinks"] }
krishiv-ivm = { path = "../krishiv-ivm", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
parquet = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
