[package]
name = "krishiv-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "krishiv_metrics"
path = "src/lib.rs"

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
opentelemetry-stdout = { workspace = true }
opentelemetry-otlp = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tonic.workspace = true
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
