[package]
name = "krishiv-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
readme = "README.md"

[lib]
name = "krishiv_metrics"
path = "src/lib.rs"

[dependencies]
http = { workspace = true }
tower = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
opentelemetry-stdout = { workspace = true }
opentelemetry-otlp = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
tonic.workspace = true
dashmap = { workspace = true }
serde = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
