[package]
name = "krishiv-optimizer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
krishiv-plan = { path = "../krishiv-plan" }
sqlparser = "0.61"
thiserror = { workspace = true }
tracing = { workspace = true }
